# catacombat-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/: default.items.json  items.json
assets/music/: catacombs.mid  catacombs_no_drums.mid
assets/sources/: cultist.aseprite
src/: lib.rs  main.rs  state.rs
src/audio/: mod.rs  music.rs  random.rs
src/characters/: location.rs  mod.rs
src/characters/enemy/: enemy.rs  mod.rs  path.rs
src/characters/player/: camera.rs  control.rs  mod.rs  player.rs
src/combat/: combat.rs  death.rs  mod.rs  pain.rs
src/gui/: menu.rs
src/inventory/: db.rs  food.rs  inventory.rs  item.rs  mod.rs  weapon.rs  world.rs
src/loading/: loading.rs
src/network/: client.rs  config.rs  mod.rs  netcode.rs
src/network/server/: server.rs
src/player/: camera.rs  control.rs  mod.rs  player.rs
src/room/: items.rs  mesh.rs  mod.rs
src/tick/: tick.rs
src/ui/: first_person.rs  mod.rs  tint.rs
src/utils/: utils.rs
src/visuals/: animation.rs  billboard.rs  mod.rs
