[package]
name = "catacombat-rs"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
rand = "0.8"
bevy_flycam = "0.13.0"
bevy-inspector-egui = "0.24.0"
renet = "0.0.15"
bevy_renet = "0.0.11"
public-ip = "0.2.2"
local-ip-address = "0.6.1"
bevy_simple_text_input = "0.7.0"
bincode = "1.3"
serde = {version = "1.0", features = ["derive"]}
bevy_sprite3d = "2.8.0"