[package]
name = "catacombat-rs"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.1"
rand = "0.8"
bevy_flycam = "0.15.0"
bevy-inspector-egui = "0.28.1"
renet = "1.0.0"
bevy_renet = "1.0.0"
public-ip = "0.2.2"
local-ip-address = "0.6.3"
bevy_simple_text_input = "0.10.1"
bincode = "1.3"
serde = {version = "1.0.217", features = ["derive"]}
bevy_sprite3d = "4.0.0"