[package]
name = "catacombat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.1"
rand = "0.8"
bevy_flycam = "0.15.0"
bevy-inspector-egui = "0.28.1"
bincode = "1.3"
serde = {version = "1.0.217", features = ["derive"]}
bevy_sprite3d = "4.0.0"
bevy_rustysynth = {version = "0.3.0", features = ["hl4mgm"]}
pathfinding = "4.13.1"
clap = { version = "4.5.26", features = ["cargo"]}